--- a/alpha/nodejs-chart/values.yaml
+++ b/alpha/nodejs-chart/values.yaml
@@ -44,8 +44,8 @@ build:
   #    memory: 4Gi
 
   source:
-    namespace: openshift
-    name: nodejs:22-ubi9
+    namespace: nodejs
+    name: nodejs:latest
 
 ## Application/Deployment-specific values (For configuring Deployment, Service, Route, ConfigMap, etc)
 deploy:
